<resources>
    <!--    App name    -->
    <string name="app_name">Covid App</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">G-Six</string>
    <string name="nav_header_subtitle">Procesos Software - URJC</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--  Reusables  -->

    <string name="loading">Loading...</string>


    <!-- Menu strings -->
    <string name="menu_home">Home</string>
    <string name="menu_covid_stats">Stats</string>
    <string name="menu_covid_ranking">Ranking</string>
    <string name="menu_covid_info">Info</string>
    <string name="menu_covid_children_info">Children</string>
    <string name="menu_covid_test">Quiz</string>
    <string name="menu_lang">Language</string>

    <!--  Home  -->
    <string name="home_h1">General information about CovidInfo</string>
    <string name="home_text1">CovidInfo allows the user to see real-time data of Covid-19.</string>
    <string name="home_h2">Real time data</string>
    <string name="home_text2">To access the functionality, we will simply display the side menu and click on the Covid Stats option. Here is information with the number of cases, deaths, accumulated incidence and other data about the covid in the country that we are.</string>
    <string name="home_h3">Ranking of countries with more cases</string>
    <string name="home_text3">To see the ranking of the countries with the most cases of Covid-19 worldwide, you must access the Covid Ranking option located in the side menu.</string>
    <string name="home_h4">Info about Covid-19</string>
    <string name="home_text4">In the drop-down menu we can click on the Covid Info option to obtain information about the symptoms of Covid-19 and about the danger it can pose to oneself.</string>
    <string name="home_h5">Quiz</string>
    <string name="home_text5">With this functionality we will be able to perform tests that will test our knowledge about Covid-19 and prevention and hygiene methods.</string>

    <!--  Info  -->
    <string name="info_q1">What are the symptoms of COVID-19?</string>
    <string name="info_a1">The most common symptoms of COVID-19 are fever, dry cough, and fatigue. Other less common symptoms that affect some patients include aches and pains, nasal congestion, headache, conjunctivitis, sore throat, diarrhea, loss of taste or smell, and skin rashes or color changes. on the fingers or toes. These symptoms are usually mild and begin gradually. Some of the infected people have only very mild symptoms.</string>
    <string name="info_q2">Am I in danger?</string>
    <string name="info_a2">Most people (about 80%) recover from the disease without the need for hospital treatment. About 1 in 5 people who contract COVID-19 develop a severe condition and experience breathing difficulties. Older people and those with previous medical conditions such as high blood pressure, heart or lung problems, diabetes, or cancer are more likely to develop severe conditions. However, anyone can get COVID-19 and become seriously ill.</string>

    <!-- Children -->
    <string name="children_1">Welcome here we will learn together what we have to do to be safe. Join me and we will learn together in this adventure!</string>
    <string name="children_2">Every time you touch things on the ground or come back from the street \'Wash your hands with soap and water\'.</string>
    <string name="children_3">If you are going to do \'Achús!\', Sneeze or cough, cover your nose with a tissue.</string>
    <string name="children_4">Stay away from people who sneeze or have colds otherwise you will get sick.</string>
    <string name="children_5">If you see that you have caught a cold or feel ill, notify your parents so they can take you to the hospital.</string>
    <string name="children_6">I hope you had a good time learning with me, that you are careful and listen to your parents!</string>

    <!--  Ranking  -->
    <string name="ranking_title">Top 5 in Cases Amount: </string>

    <!--  Stats  -->
    <string name="stats_heading">Real-time stats about Covid-19: </string>
    <string name="stats_country">Country: </string>
    <string name="stats_active_cases">Active cases: </string>
    <string name="stats_critical_cases">Critical cases: </string>
    <string name="stats_recovered">Recovered: </string>
    <string name="stats_total_cases">Total cases: </string>
    <string name="stats_today_cases">Today cases: </string>
    <string name="stats_total_deceases">Total deceases: </string>
    <string name="stats_population">Population</string>
    <string name="stats_last_updated">Last updated: </string>


    <!--quiz -->

    <string name="quiz_q1">Dry cough, is it a symptom of Covid?</string>


    <string name="quiz_q2">Which of the following is not a symptom of Covid?</string>
    <string name="quiz_q2_a1">Headache</string>
    <string name="quiz_q2_a2">Nasal congestion</string>
    <string name="quiz_q2_a3">Hair loss</string>
    <string name="quiz_q2_a4">Loss of taste and smell</string>

    <string name="quiz_q3">What percentage of people have a severe case of Covid?</string>
    <string name="quiz_q3_a1">20%</string>
    <string name="quiz_q3_a2">40%</string>
    <string name="quiz_q3_a3">60%</string>
    <string name="quiz_q3_a4">80%</string>

    <string name="quiz_q4">Which of the following people is most likely to have severe case of Covid?</string>
    <string name="quiz_q4_a1">A six years old kid</string>
    <string name="quiz_q4_a2">A teenager</string>
    <string name="quiz_q4_a3">A retiree</string>
    <string name="quiz_q4_a4">A person with lung problems</string>

    <string name="quiz_q5">Which of the following pathologies does not put you at risk for Covid?</string>
    <string name="quiz_q5_a1">Diabetes</string>
    <string name="quiz_q5_a2">Epilepsy</string>
    <string name="quiz_q5_a3">Asthma</string>

    <string name="quiz_q6">If you have a fever, cough and headache, can you have Covid?</string>


    <string name="quiz_q7">If your right arm hurts, you sneeze and you feel tired, can you have Covid?</string>

    <string name="quiz_q8">If you have a headache, can you have Covid?</string>

    <string name="quiz_yes">Yes</string>
    <string name="quiz_no">No</string>

    <string name="quiz_send">Submit</string>
    <string name="quiz_score">Score: %1$d/8 </string>

    <string name="quiz_error">You must check all the boxes!</string>



    <string name="lang_selection_msg">Please choose the desired language:</string>
    <string name="menu_scores">Scores</string>
    <string name="btn_go_quiz">Go to quiz</string>
    <string name="no_scores">For scores to be displayed, you must answer the quiz at least once.</string>
    <string name="scores_text">These are your quiz results:</string>


</resources>