<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    android:background="@color/radical_red">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gsix.covid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_covid_stats"
        android:name="com.gsix.covid.ui.stats.StatsFragment"
        android:label="@string/menu_covid_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_covid_ranking"
        android:name="com.gsix.covid.ui.ranking.RankingFragment"
        android:label="@string/menu_covid_ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_covid_info"
        android:name="com.gsix.covid.ui.info.InfoFragment"
        android:label="@string/menu_covid_info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/nav_covid_test"
        android:name="com.gsix.covid.ui.quiz.QuizFragment"
        android:label="@string/menu_covid_test"
        tools:layout="@layout/fragment_quiz" />
    <fragment
        android:id="@+id/nav_covid_lang"
        android:name="com.gsix.covid.ui.lang.LangFragment"
        android:label="@string/menu_lang"
        tools:layout="@layout/fragment_lang" />
    <fragment
        android:id="@+id/nav_covid_scores"
        android:name="com.gsix.covid.ui.scores.ScoresFragment"
        android:label="@string/menu_scores"
        tools:layout="@layout/fragment_scores" />

    <fragment
        android:id="@+id/nav_covid_des"
        android:name="com.gsix.covid.ui.test.TestFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_test" />
</navigation>