<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.QuizFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quiz_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="24dp"
            android:text="@string/quiz_q1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="53dp" />

        <RadioGroup
            android:id="@+id/quiz_q1_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/quiz_q1_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_yes" />

            <RadioButton
                android:id="@+id/quiz_q1_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="144dp" />

        <RadioGroup
            android:id="@+id/quiz_q2_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/quiz_q2_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2_a1"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="176dp" />

            <RadioButton
                android:id="@+id/quiz_q2_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2_a2"
                tools:layout_editor_absoluteX="214dp"
                tools:layout_editor_absoluteY="176dp" />

            <RadioButton
                android:id="@+id/quiz_q2_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2_a3"
                tools:layout_editor_absoluteX="21dp"
                tools:layout_editor_absoluteY="215dp" />

            <RadioButton
                android:id="@+id/quiz_q2_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q2_a4"
                tools:layout_editor_absoluteX="214dp"
                tools:layout_editor_absoluteY="215dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="366dp" />


        <RadioGroup
            android:id="@+id/quiz_q4_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/quiz_q4_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q4_a1"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="411dp" />

            <RadioButton
                android:id="@+id/quiz_q4_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q4_a2"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="411dp" />

            <RadioButton
                android:id="@+id/quiz_q4_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q4_a3"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="479dp" />

            <RadioButton
                android:id="@+id/quiz_q4_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q4_a4"
                tools:layout_editor_absoluteX="189dp"
                tools:layout_editor_absoluteY="469dp" />

        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.313"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="255dp" />

        <RadioGroup
            android:id="@+id/quiz_q3_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/quiz_q3_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q3_a1"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="296dp" />

            <RadioButton
                android:id="@+id/quiz_q3_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q3_a2"
                tools:layout_editor_absoluteX="113dp"
                tools:layout_editor_absoluteY="296dp" />

            <RadioButton
                android:id="@+id/quiz_q3_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q3_a3"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="296dp" />

            <RadioButton
                android:id="@+id/quiz_q3_a4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q3_a4"
                tools:layout_editor_absoluteX="297dp"
                tools:layout_editor_absoluteY="296dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="542dp" />

        <RadioGroup
            android:id="@+id/quiz_q5_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/quiz_q5_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q5_a1"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="578dp" />


            <RadioButton
                android:id="@+id/quiz_q5_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q5_a2"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="578dp" />

            <RadioButton
                android:id="@+id/quiz_q5_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_q5_a3"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="578dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.028"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="731dp" />

        <RadioGroup
            android:id="@+id/quiz_q7_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/quiz_q7_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_yes" />

            <RadioButton
                android:id="@+id/quiz_q7_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.207"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="646dp" />

        <RadioGroup
            android:id="@+id/quiz_q6_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/quiz_q6_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_yes" />

            <RadioButton
                android:id="@+id/quiz_q6_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_q8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/quiz_q8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.349"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="822dp" />

        <RadioGroup
            android:id="@+id/quiz_q8_rg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/quiz_q8_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_yes" />

            <RadioButton
                android:id="@+id/quiz_q8_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_no" />
        </RadioGroup>

        <Button
            android:id="@+id/quiz_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:text="@string/quiz_send" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="28dp"
            tools:text="@string/quiz_score" />


    </LinearLayout>


</ScrollView>

